# rdf_dynsyn

./: Cargo.toml  README.md
src/: correspondence.rs  file_extension.rs  lib.rs  syntax.rs  syntax_hint.rs
src/model/: mod.rs  quad.rs
src/parser/: errors.rs  mod.rs
src/parser/_inner/: errors.rs  mod.rs  source.rs
src/parser/quads/: mod.rs  source.rs
src/parser/triples/: mod.rs  source.rs
src/serializer/: mod.rs
src/serializer/_inner/: mod.rs
src/serializer/quads/: mod.rs
src/serializer/triples/: mod.rs
