[package]
name = "somehow_rdf"
version = "0.1.0"
edition = "2021"
description = "A package to serialize/deserialize rdf documents with any supported syntax that can be specified at runtime, with out concerning oneself on resolving parsers."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_term = "0.7.1"
sophia_api = "0.7.1"
sophia_turtle = "0.7.1"
sophia_rio = "0.7.1"
sophia_xml = "0.7.1"
rio_turtle = "0.6.1"
rio_api = "0.6.1"
rio_xml = "0.6.1"
oxiri = "0.2.1"
once_cell = "1.9.0"
mime = "0.3.16"
thiserror = "1.0.30"
anyhow = "1.0.52"
tracing = "0.1.29"

[dev-dependencies]
claim = "0.5.0"
env_logger = "0.9.0"
test-case = "1.2.1"
tracing = {version = "0.1.29", features=["log"]}
sophia_inmem = "0.7.1"
